Single File, App Settings, App Secrets

--- a/src/MICMediaManager/appsettings.json
+++ b/src/MICMediaManager/appsettings.json
@@ -1,4 +1,5 @@
 ﻿{
+  "userSecretsId": "MICMediaManager-cf471bbf-c7a2-45e9-b9c0-fd5d6e9b106c",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MICMediaManager-cf471bbf-c7a2-45e9-b9c0-fd5d6e9b106c;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
@@ -9,5 +10,10 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },  
+    "StorageAccountName": "",
+    "StorageAccountKey": ""
+  
 }
+
+
