Added Option for BlobContainerName

--- a/MICMediaManager/src/MICMediaManager/appsettings.json
+++ b/MICMediaManager/src/MICMediaManager/appsettings.json
@@ -9,10 +9,11 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  },  
-    "StorageAccountName": "",
-    "StorageAccountKey": ""
-  
+  },
+  "StorageAccountName": "",
+  "StorageAccountKey": "",
+  "BlobContainerName": ""
+
 }
 
 
