Closes #1, Adds Twitter Auth

--- a/MICMediaManager/src/MICMediaManager/appsettings.json
+++ b/MICMediaManager/src/MICMediaManager/appsettings.json
@@ -12,7 +12,9 @@
   },
   "StorageAccountName": "",
   "StorageAccountKey": "",
-  "BlobContainerName": ""
+  "BlobContainerName": "",
+  "TwitterAPIKey": "",
+  "TwitterAPISecret": ""
 
 }
 
