--- a/MICMediaManager/src/MICMediaManager/project.json
+++ b/MICMediaManager/src/MICMediaManager/project.json
@@ -44,7 +44,8 @@
       "version": "1.0.0-preview2-final",
       "type": "build"
     },
-    "WindowsAzure.Storage": "8.0.0"
+    "WindowsAzure.Storage": "8.0.0",
+    "Microsoft.AspNetCore.Authentication.Twitter": "1.1.0"
   },
 
   "tools": {
